force-app/main/default/objects/dw_ecard_app_dat_discrepancy_code__x/dw_ecard_app_dat_discrepancy_code__x.object-meta.xml
<CustomObject>
    <description>dw_ecard_app$dat_discrepancy_code</description>
    <externalDataSource>Heroku</externalDataSource>
    <externalName>dw_ecard_app$dat_discrepancy_code</externalName>
    <label>dw_ecard_app$dat_discrepancy_code</label>
    <pluralLabel>dw_ecard_app$dat_discrepancy_code</pluralLabel>
</CustomObject>