force-app/main/default/objects/dw_ecard_app_dat_discrepancy_code__x/fields/discrepancy_description__c.field-meta.xml
<CustomField>
    <fullName>discrepancy_description__c</fullName>
    <description>discrepancy_description</description>
    <externalDeveloperName>discrepancy_description</externalDeveloperName>
    <label>discrepancy_description</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>