force-app/main/default/objects/dw_ecard_app_dat_discrepancy_code__x/fields/guid__c.field-meta.xml
<CustomField>
    <fullName>guid__c</fullName>
    <description>guid</description>
    <externalDeveloperName>guid</externalDeveloperName>
    <label>guid</label>
    <length>64</length>
    <type>Text</type>
</CustomField>